# finiteflow32

./: .gitignore  CMakeLists.txt  README.md  validate_finiteflow32.sh
docs/: finiteflow32-arithmetic-audit.md  finiteflow32-build.md  finiteflow32-node-polydiv-design.md
include/fflow/: alg_groebner.hh  alg_linear_solver.hh  alg_lists.hh  alg_poly_reduction.hh  capi.h  capi_custom_threads.h  capi_native_ext.h  common.hh  config.hh.in  debug.hh  ffmod.h  gcd.hh  graph.hh  json.hh  matrix.hh  poly_reduction.hh  polynomial.hh  primes.hh  primes32.hh
mathlink/: FiniteFlow.m  FiniteFlow32.m  fflowmlink.cc  test_sparse_solver.m
pythonapi/: README.md  fflow.py  fflow_build.py  finiteflow32.py  test_draw_graph.py  test_solver.py  tests.py
scripts/: build_finiteflow32.sh  generate_primes32.py  test_finiteflow32_arithmetic.sh  test_mathematica_add_one.sh  test_mathematica_groebner.sh  test_mathematica_leading_monomials.sh  test_mathematica_msolve_prime.sh  test_mathematica_multiprime.sh  test_mathematica_poly_div.sh  test_mathematica_poly_div_wrapper.sh  test_mathematica_smoke.sh  test_mathematica_tutorial.sh  test_poly_reduction.sh
src/: alg_groebner.cc  alg_linear_solver.cc  alg_lists.cc  alg_poly_reduction.cc  capi.cc  capi_custom_threads.cc  capi_native_ext.cc  debug.cc  ff_prime32_list.hh  ffmod.c  graph.cc  json.cc  matrix.cc  poly_reduction.cc  primes.cc  subgraph_reconstruct.cc
tests/: testcapi.c  testfiniteflow32_arithmetic.cc  testpoly_reduction.cc
tests/mathematica/: add_one.m  groebner.m  leading_monomials.m  msolve_prime_compat.m  multiprime_reconstruction.m  poly_div.m  poly_div_wrapper.m  smoke.m  tutorial_basic.m
